VictorL - Fixed bug where background image would jump when first scrolling. Made background parallax more obvious.

--- a/css/base.scss
+++ b/css/base.scss
@@ -295,8 +295,7 @@
 ================================================== */
 
     .home-background {
-        background: url(/assets/img/background_5.jpg) no-repeat center center fixed;
-        background-position: center center;
+        background: url(/assets/img/background_5.jpg) no-repeat fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
